--- a/kube/deployment.yaml
+++ b/kube/deployment.yaml
@@ -19,14 +19,19 @@ spec:
             - containerPort: 80
               protocol: TCP
           env:
-            - name: db_name
-              value: getting-started-db
-            - name: db_user
-              value: admin
-            - name: db_password
+            - name: DB_HOST
+              value: postgres-service.getting-started.svc.cluster.local
+            - name: DB_NAME
+              value: getting_started
+            - name: DB_USER
               valueFrom:
                 secretKeyRef:
-                  name: getting-started-db
+                  name: db-credentials
+                  key: user
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
                   key: password
       imagePullSecrets:
         - name: github
