--- a/kube/db-storage.yaml
+++ b/kube/db-storage.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -13,7 +12,7 @@ spec:
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: /mnt/data
+    path: "/mnt/data"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
