--- a/kube/statefulset.yaml
+++ b/kube/statefulset.yaml
@@ -21,7 +21,7 @@ spec:
               protocol: TCP
           env:
             - name: DB_HOST
-              value: postgres-service.getting-started.svc.cluster.local
+              value: postgres-service.default.svc.cluster.local
             - name: DB_NAME
               value: getting_started
             - name: DB_USER
